--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="Wildlife">Wildlife</string>
     <string name="Manmade_monuments">Man-made monuments</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps2">Map</string>
 </resources>
