--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="Manmade_monuments">Man-made monuments</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="title_activity_all">AllActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
